# c_cxx_exercise

./: .gitignore  .travis  CMakeLists.txt  README  appveyor.yml  build.bat  build.sh  copy_template.py  fbuild.bat
algorithm/: CMakeLists.txt
algorithm/data/: poj1163.in  s532.ok
algorithm/dynamic_planning/: poj1163.cc  poj1163.h
algorithm/simple/: s513.cc  s513.h  s522.cc  s522.h  s531.cc  s531.h  s532.cc  s532.h  t532.cc  t532.h
algorithm/utils/: utils.cc  utils.h
cpp11/: CMakeLists.txt  callback.cpp  main.cpp  std_function_bind.cpp
data_struct/: CMakeLists.txt
data_struct/list/: list.c  list.h
data_struct/pointer/: pointer.h
data_struct/tree/: avltree.h  tree.c  tree.cc  tree.h  tree.hpp  tree1.cc  tree1_v2.cc
effective_cxx/: CMakeLists.txt
effective_cxx/item10/: item10.cc  item10.h
effective_cxx/item11/: item11.cc  item11.h
effective_cxx/item12/: item12.cc  item12.h
effective_cxx/item13/: item13.cc  item13.h
effective_cxx/item14/: item14.h
effective_cxx/item15/: item15.cc  item15.h
effective_cxx/item17/: item17.h
effective_cxx/item2/: item2.cc  item2.h
effective_cxx/item23/: item23.cc  item23.h  webbrowser.h  webbrowserbookmarks.h  webbrowsercookies.h
effective_cxx/item24/: item24.cc  item24.h
effective_cxx/item25/: item25.cc  item25.h
effective_cxx/item26/: item26.cc  item26.h
effective_cxx/item27/: item27.cc  item27.h
effective_cxx/item28/: item28.cc  item28.h
effective_cxx/item29/: item29.cc  item29.h
effective_cxx/item3/: item3.cc  item3.h
effective_cxx/item31/: item31.cc  item31.h
effective_cxx/item32/: item32.h
effective_cxx/item33/: item33.cc  item33.h
effective_cxx/item34/: item34.cc  item34.h
effective_cxx/item35/: item35.cc  item35.h
effective_cxx/item36/: item36.cc  item36.h
effective_cxx/item37/: item37.cc  item37.h
effective_cxx/item39/: item39.cc  item39.h
effective_cxx/item4/: Directory.cc  Directory.h  FileSystem.cc  FileSystem.h  item4.h
effective_cxx/item41/: item41.h
effective_cxx/item43/: item43.cc  item43.h
effective_cxx/item6/: item6.cc  item6.h
effective_cxx/item7/: item7.cc  item7.h
effective_cxx/item8/: item8.cc  item8.h
effective_cxx/item9/: item9.cc  item9.h
effective_modern_cxx/: CMakeLists.txt
effective_modern_cxx/item3_1_10/: item3_1_10.h
effective_modern_cxx/item4_18/: item4_18.cc  item4_18.h
effective_modern_cxx/item4_22/: item4_22.cc  item4_22.h
effective_modern_cxx/item5_2_2/: item5_2_2.h
effective_modern_cxx/item5_2_5/: item5_2_5.h
effective_modern_cxx/item7_2/: item7_2.h
effective_modern_cxx/template4_18/: template4_18.cc  template4_18.h
list/: CMakeLists.txt
list/src/: list.c  list.h  list_v2.c
pointer/: CMakeLists.txt
pointer/include/: pointer.h
pointer/src/: pointer.c
project2/: CMakeLists.txt
project2/src/: main.cpp
rd/: CMakeLists.txt
rd/base/transport/: socket.h
rd/base/transport/tcp/: tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h  tcp_socket.cc  tcp_socket.h
rd/base/video/: h264_decoder.cc  h264_decoder.h  h264_encoder.cc  h264_encoder.h  h264_encoder_factory.cc  h264_encoder_factory.h  h264_video_factory.cc  h264_video_factory.h  h265_decoder.cc  h265_decoder.h  h265_encoder.cc  h265_encoder.h  h265_encoder_factory.cc  h265_encoder_factory.h  h265_video_factory.cc  h265_video_factory.h  video_decoder.h  video_encoder.h  video_encoder_factory.h  video_encoder_simple_factory.cc  video_encoder_simple_factory.h  video_encoder_type.h  video_factory.h
rd/server/windows/capture/: capture.h  capture_factory.h  gdi_capture.cc  gdi_capture.h  gdi_capture_factory.cc  gdi_capture_factory.h
testing/: CMakeLists.txt  avltree_unittest.cc  dispatcher_table_cxx11_unittest.cc  list_unittest.cc  pointer_unittest.cc  tree_unittest.cc  unittest.cc
testing/algorithm/: poj1163_unittest.cc  s513_unittest.cc  s522_unittest.cc  s531_unittest.cc  s532_unittest.cc  t532_unittest.cc
testing/algorithm2/: p40_3_3_unittest.cc
testing/data_struct/: avltree_unittest.cc  list_unittest.cc  pointer_unittest.cc  tree1_unittest.cc  tree1_v2_unittest.cc  tree_unittest.cc
testing/effective_cxx/: item10_unittest.cc  item11_unittest.cc  item12_unittest.cc  item13_unittest.cc  item14_unittest.cc  item15_unittest.cc  item17_unittest.cc  item24_unittest.cc  item25_unittest.cc  item27_unittest.cc  item28_unittest.cc  item29_unittest.cc  item2_unittest.cc  item33_unittest.cc  item34_unittest.cc  item35_unittest.cc  item36_unitest.cc  item37_unittest.cc  item39_unittest.cc  item3_unittest.cc  item41_unittest.cc  item43_unittest.cc  item4_unittest.cc  item6_unittest.cc  item7_unittest.cc  item8_unittest.cc  item9_unittest.cc
testing/effective_modern_cxx/: item3_1_10.unittest.cc  item3_1_10_unittest.cc  item4_18_unittest.cc  item4_22_unittest.cc  item5_2_1_unittest.cc  item5_2_3_unittest.cc  template4_18_unittest.cc
testing/rd/base/transport/tcp/: tcp_unittest.cc
testing/rd/base/video/: video_encoder_unittest.cc
testing/rd/server/capture/: capture_unittest.cc
testing/the_cxx_stl_a_tutorial_and_reference_2012/: item5_2_2_unittest.cc  item5_2_5_unittest.cc  item7_2_unittest.cc
the_cxx_stl_a_tutorial_and_reference_2012/: CMakeLists.txt
the_cxx_stl_a_tutorial_and_reference_2012/item3_1_10/: item3_1_10.cc  item3_1_10.h
the_cxx_stl_a_tutorial_and_reference_2012/item5_2_1/: item5_2_1.h
the_cxx_stl_a_tutorial_and_reference_2012/item5_2_3/: item5_2_3.h
tree/: CMakeLists.txt
tree/src/: avltree.c  avltree.h  tree.c  tree.h
